WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257163
[JSC] Early return in microtask draining when termination happens
https://bugs.webkit.org/show_bug.cgi?id=257163
Summary
[JSC] Early return in microtask draining when termination happens
Yusuke Suzuki
Reported
2023-05-22 16:18:14 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Yusuke Suzuki
Comment 1
2023-05-22 16:18:16 PDT
<
rdar://problem/109401883
>
Yusuke Suzuki
Comment 2
2023-05-22 16:19:02 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14213
EWS
Comment 3
2023-05-22 18:08:59 PDT
Committed
264390@main
(3201e5f5a718): <
https://commits.webkit.org/264390@main
> Reviewed commits have been landed. Closing PR #14213 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug