[JSC] Early return in microtask draining when termination happens https://bugs.webkit.org/show_bug.cgi?id=257163 rdar://109401883

Reviewed by Mark Lam.

This is Debug only, JSC shell only issue. Early returning from microtask draining when termination happens.

* JSTests/stress/exception-check-unhandled-promise-rejection-in-shell.js: Added.
(async foo):
* Source/JavaScriptCore/runtime/VM.cpp:
(JSC::VM::didExhaustMicrotaskQueue):
(JSC::VM::drainMicrotasks):

Canonical link: https://commits.webkit.org/264390@main